--- a/profil.html
+++ b/profil.html
@@ -29,7 +29,7 @@
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="https://image.tmdb.org/t/p/original${movie.poster_path}" class="img-fluid rounded-start" id="imageList" alt="affiche film">
+                                    <img src="https://image.tmdb.org/t/p/original${movie.poster_path}" class="img-fluid rounded-start" alt="affiche film">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
