--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             </div>
         </nav>
     </header>
+    <div><input type="search" name="searchInput" id="searchInput" placeholder="Recherchez votre film..."> <button id="searchButton" class="btn btn-secondary">Search</button></div>
     <div id="infos" class="container">
+        <div id="releaseHTML" class="d-flex flex-row"></div>
     </div>
 
 
@@ -25,6 +27,9 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <script src="assets/script/script.js"></script>
+    <script>
+        const btn = document.querySelector('#searchButton');
+    </script>
 
 </body>
 
