--- a/profil.html
+++ b/profil.html
@@ -10,7 +10,23 @@
 </head>
 
 <body>
-    <div class="container" id="infos"></div>
+    <div class="container" id="infos">
+        <div class="card mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img class="img-fluid rounded-start" id="movie-poster" src="" alt="affiche film">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title" id="movie-title"></h5>
+                        <p class="card-text" id="movie-release-date"></p>
+                        <p class="card-text" id="movie-overview"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <a href="index.html"><button>Retour à l'accueil</button></a>
 
 
 
@@ -18,33 +34,31 @@
 
 
     <script>
-        fetch("data/movies.json")
-            .then(response => response.json())
-            .then(data => {
-                console.log(data);
-                const infosContainer = document.querySelector('#infos');
-    
-                for (const movie of data.results) {
-                    const cardHTML = `
-                        <div class="card mb-3" style="max-width: 540px;">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="https://image.tmdb.org/t/p/original${movie.poster_path}" class="img-fluid rounded-start" alt="affiche film">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    `;
+        const urlParams = new URLSearchParams(window.location.search);
+        const movieId = urlParams.get('id');
+
+        if (movieId) {
+            const options = {
+                method: 'GET',
+                headers: {
+                    accept: 'application/json',
+                    Authorization: 'Bearer eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiI1MTdjYzc0OTU1MTQ5YmUyM2RmODM4MTNmMjAxYTRlOCIsInN1YiI6IjYyODM5OGJiZWM0NTUyMTAzMmE5NTcxMyIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.REF4Oi-K06F7Jq8LolG5vPQtyeiGk3nBFdDyL1FLq7E'
                 }
-            })
+            };
+
+            fetch(`https://api.themoviedb.org/3/movie/${movieId}?&include_adult=false&language=fr-FR`, options)
+                .then(response => response.json())
+                .then(data => {
+                    console.log(data)
+                    document.getElementById('movie-title').textContent = data.title
+                    document.getElementById('movie-release-date').textContent = `Date de sortie : ${data.release_date}`
+                    document.getElementById('movie-overview').textContent = data.overview
+                    document.getElementById('movie-poster').src = `https://image.tmdb.org/t/p/original${data.poster_path}`
+                })
+        }
+
     </script>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
