--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
 <body class="bg-dark">
     <header>
             <div class="container-fluid">
-                <h2 class="text-center text-white bg-dark">MovieStream</h2>
+                <h2 class="text-center text-white bg-dark fs-1">MovieStream</h2>
             </div>
         </nav>
     </header>
-    <div><input type="search" name="searchInput" id="searchInput" placeholder="Recherchez votre film..."> <button id="searchButton" class="btn btn-secondary">Search</button></div>
+    <div class="text-center"><input type="search" name="searchInput" id="searchInput" placeholder="Recherchez votre film..."> <button id="searchButton" class="btn btn-secondary">Search</button></div>
     <div id="infos" class="container">
-        <div id="releaseHTML" class="d-flex flex-row"></div>
+        <h5 class="text-white fs-4 text-center">Les dernières sorties</h5>
+        <p class="text-secondary text-center">(clic molette pour scroll)</p>
+        <div id="release" class="container row overflow-x-scroll flex-nowrap"></div>
+        <h5 class="text-white fs-4 text-center">Les plus populaires</h5>
+        <p class="text-secondary text-center">(clic molette pour scroll)</p>
+        <div id="popular" class="container row overflow-x-scroll flex-nowrap"></div>
     </div>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
