--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <title>Document</title>
 </head>
 
-<body class="bg-dark">
+<body class="bg-black">
     <header>
             <div class="container-fluid">
                 <h2 class="text-center text-white bg-dark fs-1">MovieStream</h2>
             </div>
         </nav>
     </header>
-    <div class="text-center"><input type="search" name="searchInput" id="searchInput" placeholder="Recherchez votre film..."> <button id="searchButton" class="btn btn-secondary">Search</button></div>
-    <div id="infos" class="container">
+    <div class="text-center"><input type="search" name="searchInput" id="searchInput" class="w-50 bg-dark text-white" placeholder="Recherchez votre film..."> <button id="searchButton" class="btn btn-secondary">Search</button></div>
+    <div id="infos" class="container bg-dark">
         <h5 class="text-white fs-4 text-center">Les dernières sorties</h5>
         <p class="text-secondary text-center">(clic molette pour scroll)</p>
         <div id="release" class="container row overflow-x-scroll flex-nowrap"></div>
