--- a/profil.html
+++ b/profil.html
@@ -4,14 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Document</title>
 </head>
 
-<body>
+<body class="bg-black">
+    <header>
+        <div class="container-fluid">
+            <h2 class="text-center text-white bg-dark fs-1">MovieStream</h2>
+        </div>
+    </nav>
+</header>
     <div class="container" id="infos">
-        <div class="card mb-3" style="max-width: 540px;">
+        <div class="card mb-3 mx-auto" style="max-width: 540px;">
             <div class="row g-0">
                 <div class="col-md-4">
                     <img class="img-fluid rounded-start" id="movie-poster" src="" alt="affiche film">
@@ -26,7 +33,7 @@
             </div>
         </div>
     </div>
-    <a href="index.html"><button>Retour à l'accueil</button></a>
+    <div class=""><a href="index.html"><button class="bg-secondary text-white rounded">Retour à l'accueil</button></a></div>
 
 
 
@@ -36,7 +43,7 @@
     <script>
         const urlParams = new URLSearchParams(window.location.search);
         const movieId = urlParams.get('id');
-
+        
         if (movieId) {
             const options = {
                 method: 'GET',
