--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
         </nav>
     </header>
-    <div class="text-center"><input type="search" name="searchInput" id="searchInput" class="w-50 bg-dark text-white" placeholder="Recherchez votre film..."> <button id="searchButton" class="btn btn-secondary">Search</button></div>
+    <div class="text-center"><input type="search" name="searchInput" id="searchInput" class="w-50 bg-dark text-white" placeholder="Recherchez votre film..."> <button id="searchButton" class="btn btn-secondary">Rechercher</button></div>
     <div id="infos" class="container bg-dark">
         <h5 class="text-white fs-4 text-center">Les dernières sorties</h5>
         <p class="text-secondary text-center">(clic molette pour scroll)</p>
